@@ -48,11 +48,12 @@ memcmp(s1, s2, n)
     CONST VOID *s2;			/* Second string. */
     size_t      n;                      /* Length to compare. */
 {
-    unsigned char u1, u2;
+    VOID unsigned char *ptr1 = (VOID unsigned char *) s1;
+    VOID unsigned char *ptr2 = (VOID unsigned char *) s2;
 
-    for ( ; n-- ; s1++, s2++) {
-	u1 = * (unsigned char *) s1;
-	u2 = * (unsigned char *) s2;
+    for ( ; n-- ; ptr1++, ptr2++) {
+	unsigned char u1 = *s1, u2 = *s2;
+
 	if ( u1 != u2) {
 	    return (u1-u2);
 	}
